--- a/Web-Ecole/Views/List/Index.cshtml
+++ b/Web-Ecole/Views/List/Index.cshtml
@@ -5,15 +5,18 @@
 <br /><br />
       <div class="container">
           <div class="form-group">
-                     @if (ViewBag.ListeEcole != null)
-                     {
-                     @Html.DropDownListFor(model => model.id_ecole, ViewBag.ListeEcole as SelectList, "--select ecole -- ", new { @class = "form-control" });
-                      }
+              @if (ViewBag.ListeEcole != null)
+        {
+          @Html.DropDownListFor(model => model.id_ecole, ViewBag.ListeEcole as SelectList, "--select ecole -- ", new { @class = "form-control" });
+}
           </div>
           <div class="form-group">
               @Html.DropDownListFor(model => model.id_classe, new SelectList(""), "--select classe -- ", new { @class = "form-control" })
           </div>
-        </div>
+          <div class="form-group">
+              @Html.DropDownListFor(model => model.id_etudiant, new SelectList(""), "--select etudiant -- ", new { @class = "form-control" })
+          </div>
+      </div>
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
 <script>
@@ -25,6 +28,15 @@
                         $("#id_classe").append("<option value='" + row.id_classe + "'>"+ row.nom_classe +" </option>")
                     });
                 });
+        })
+
+        $("#id_classe").change(function () {
+            $.get("/List/GetstatListEtudiant", { id_classe: $("#id_classe").val() }, function (data) {
+                $("#id_etudiant").empty();
+                $.each(data, function (index, row) {
+                    $("#id_etudiant").append("<option value='" + row.id_etudiant + "'>" + row.nom_etudiant + " </option>")
+                });
+            });
         })
     });
 </script>
